[package]
name = "bento"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30.1", features = ["sched", "feature", "fs", "mount", "process", "hostname"] }
clap = { version = "4.5.47", features = ["derive"] }
names = { version = "0.14.0", default-features = false }
flate2 = "1.1.2"
tar = "0.4.44"
dotenv = "0.15"